unpackaged/main/default/objects/litify_pm__Firm__c/litify_pm__Firm__c.object-meta.xml
<CustomObject>
    <label>Firm</label>
    <nameField>
        <label>Firm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Firms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>