unpackaged/main/default/objects/litify_pm__Firm__c/fields/litify_pm__City__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>