unpackaged/main/default/objects/litify_pm__Firm__c/fields/litify_pm__Country__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>