unpackaged/main/default/objects/litify_pm__Firm__c/fields/litify_pm__Has_Agreements_As_Handling_Firm__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Has_Agreements_As_Handling_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has agreements as handling firm with your firm</description>
    <label>Has Agreements As Handling Firm</label>
    <type>Checkbox</type>
</CustomField>