unpackaged/main/default/objects/litify_pm__Firm__c/fields/litify_pm__Has_Agreements_As_Originating_Firm__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Has_Agreements_As_Originating_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has agreements as originating firm with your firm</description>
    <label>Has Agreements As Originating Firm</label>
    <type>Checkbox</type>
</CustomField>