unpackaged/main/default/objects/litify_pm__Firm__c/fields/litify_pm__Is_Available__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Available</label>
    <type>Checkbox</type>
</CustomField>