unpackaged/main/default/objects/litify_pm__Firm__c/fields/litify_pm__Location__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>