unpackaged/main/default/objects/litify_pm__Firm__c/fields/litify_pm__Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Primary_Contact_Email__c</fullName>
    <label>Primary Contact Email</label>
    <type>Email</type>
</CustomField>