unpackaged/main/default/objects/litify_pm__Firm__c/fields/litify_pm__Primary_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Primary_Contact_First_Name__c</fullName>
    <label>Primary Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>