unpackaged/main/default/objects/litify_pm__Firm__c/fields/litify_pm__Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Primary_Contact_Phone__c</fullName>
    <label>Primary Contact Phone</label>
    <type>Phone</type>
</CustomField>