unpackaged/main/default/objects/litify_pm__Firm__c/listViews/litify_pm__All.listView-meta.xml
<ListView>
    <fullName>litify_pm__All</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__Location__c</columns>
    <columns>litify_pm__Litify_com_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>